# Postfix Admin 
# 
# LICENSE 
# This source file is subject to the GPL license that is bundled with  
# this package in the file LICENSE.TXT. 
# 
# Further details on the project are available at : 
#     http://www.postfixadmin.com or http://postfixadmin.sf.net 
#
# Last update:
# $Id$

Version 2.3.8 - 2015/10/07 - SVN r1814 (postfixadmin-2.3 branch)
----------------------------------------------------------------
  - fix query to enable/disable alias in edit-mailbox for PostgreSQL (#311)
  - don't prefill username in users/ login on failed logins - fixes (probably
    harmless) XSS
  - fix show_gen_status() to properly escape mail addresses in query (#356)
  - fix escaping in create-admin, create-mailbox and fetchmail templates -
    fixes (harmless) XSS on form validation errors
  - don't echo the password back to the browser in the fetchmail form
  - allow MariaDB in Debian package dependencies

Version 2.3.7 - 2014/02/20 - SVN r1651 (postfixadmin-2.3 branch)
----------------------------------------------------------------
  - SECURITY: fix SQL injection in show_gen_status() (CVE-2014-2655)
  - lt.lang, da.lang translation update
  - when enabling/disabling a mailbox, also update the corresponding alias
  - fix creating superadmin in setup.php with MariaDB (more strict SQL)
  - don't trim() mail address to avoid that aliases starting with a space are
    allowed. This fixes http://sourceforge.net/p/postfixadmin/bugs/210/ and
    https://sourceforge.net/p/postfixadmin/feature-requests/113/
  - update regex in check_domain() to support new, longer TLDs like .international
  - mark vacation_notification.notified field as latin1 to avoid overlong index
  - vacation.pl: encode subject
  - vacation.pl: disable use of TLS by default due to a bug in Mail::Sender 0.8.22
    (you can re-enable it with $smtp_tls_allowed)

Version 2.3.6 - 2013/01/02 - SVN r1417 (postfixadmin-2.3 branch)
----------------------------------------------------------------
